# 3D_pereception_Based_Mobile_Manipulator-Autonomous_Navigation_System

./: .gitignore  README.md
depth_perception/astra_camera/params/: astra_mini_params.yaml
depth_perception/hybrid_csrt_ibvs/: CMakeLists.txt  README.md  package.xml
depth_perception/hybrid_csrt_ibvs/config/: eef_usb_camera.yaml  eef_usb_camera_sim.yaml  turtlebot3_waffle_pi_orbbec.yaml  turtlebot3_waffle_pi_orbbec_sim.yaml  usb_cam_area_fallback.yaml
depth_perception/hybrid_csrt_ibvs/include/hybrid_csrt_ibvs/: csrt_ibvs_node.hpp
depth_perception/hybrid_csrt_ibvs/launch/: hybrid_csrt_ibvs.launch.py
depth_perception/hybrid_csrt_ibvs/src/: csrt_ibvs_main.cpp  csrt_ibvs_node.cpp
depth_perception/hybrid_csrt_ibvs/tools/: publish_bbox.py
depth_perception/hybrid_single_target_tracker/: CMakeLists.txt  README.md  package.xml
depth_perception/hybrid_single_target_tracker/config/: params.yaml
depth_perception/hybrid_single_target_tracker/launch/: hybrid_single_target_tracker.launch.py  hybrid_single_target_tracker_sim.launch.py
depth_perception/hybrid_single_target_tracker/src/: hybrid_single_target_tracker_node.cpp
docs/: 0. Project Overview.md  1. 3D Vision Based Object Perception System.md  2. 3D Spatial Coordinate-Based Manipulator Precision Control.md  3. Autonomous Platooning and Cooperative Object Transfer System.md
mp_control/: CMakeLists.txt  package.xml
mp_control/config/: mp_control_params.yaml  mp_control_sim_params.yaml
mp_control/launch/: hybrid_grasp.launch.py  mp_control.launch.py  sim_hybrid_grasp.launch.py  sim_pick_place_demo.launch.py
mp_control/src/: mp_control_node.cpp
mp_control/tools/: sim_pick_place_demo.py
po_delivery/: CMakeLists.txt  package.xml
scripts/: auto_git_push.sh  sync_obsidian_docs.sh
turtlebot3_manipulation/turtlebot3_manipulation_bringup/: package.xml
turtlebot3_manipulation/turtlebot3_manipulation_bringup/launch/: base.launch.py  hardware.launch.py
turtlebot3_manipulation/turtlebot3_manipulation_description/launch/: model.launch.py
turtlebot3_manipulation/turtlebot3_manipulation_description/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro
turtlebot3_manipulation/turtlebot3_manipulation_description/xacro/: open_manipulator_x.urdf.xacro  orbbec_astra.urdf.xacro  turtlebot3_manipulation.urdf.xacro
turtlebot3_manipulation/turtlebot3_manipulation_moveit_config/launch/: servo.launch.py
turtlebot3_manipulation/turtlebot3_manipulation_teleop/src/: turtlebot3_manipulation_teleop.cpp
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger_cam/: model-1_4.sdf  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model-1_4.sdf  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle_pi/: model-1_4_.sdf  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/rviz/: tb3_gazebo.rviz
turtlebot3_simulations/turtlebot3_gazebo/urdf/: turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
turtlebot3_simulations/turtlebot3_manipulation_gazebo/: package.xml
turtlebot3_simulations/turtlebot3_manipulation_gazebo/gazebo/: turtlebot3_waffle_pi.gazebo.xacro
turtlebot3_simulations/turtlebot3_manipulation_gazebo/launch/: base.launch.py  fake.launch.py  gazebo.launch.py  gazebo_rviz.launch.py  sim_hybrid_grasp.launch.py  sim_pick_place_demo.launch.py  turtlebot3_home_service_challenge.launch.py
turtlebot3_simulations/turtlebot3_manipulation_gazebo/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro
turtlebot3_simulations/turtlebot3_manipulation_gazebo/rviz/: turtlebot3_manipulation.rviz
turtlebot3_simulations/turtlebot3_manipulation_gazebo/urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
turtlebot3_simulations/turtlebot3_manipulation_gazebo/worlds/: grasp_10m_room.world  grasp_3m_room.world  grasp_far_test.world  grasp_test.world
