<?xml version="1.0"?>
<package format="3">
  <name>hybrid_csrt_ibvs</name>
  <version>0.1.0</version>
  <description>Hybrid CSRT tracker and IBVS controller for ROS 2 mobile manipulation experiments.</description>
  <maintainer email="student@example.com">UROP I</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>libopencv-contrib-dev</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
